<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.meeteor.www.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="28sp"
        android:layout_marginBottom="36dp"
        android:text="@string/header"
        android:id="@+id/textView" />
    <Button
        style="@style/AppButton"
        android:text="@string/app_one"
        android:onClick="showToast"/>
    <Button
        style="@style/AppButton"
        android:text="@string/app_two"
        android:onClick="showToast"/>
    <Button
        style="@style/AppButton"
        android:text="@string/app_three"
        android:onClick="showToast"/>
    <Button
        style="@style/AppButton"
        android:text="@string/app_four"
        android:onClick="showToast"/>
    <Button
        style="@style/AppButton"
        android:text="@string/app_five"
        android:onClick="showToast"/>
    <Button
        style="@style/AppButton"
        android:background="#FF5057"
        android:text="@string/app_six"
        android:onClick="showToast"/>
</LinearLayout>
